web/css/grouphub.css
/* ... */
/* line 210, _edit_group.scss */
.edit_group_container ul.users li {
    padding: 10px 0px 10px 20px;
    border-bottom: 1px solid #eaeaea; }
/* line 212, _edit_group.scss */
.edit_group_container ul.users li.separator {
    background-color: #52b2cd;
    color: white;
    text-align: center; }
/* line 220, _edit_group.scss */
.edit_group_container ul.users li:last-child {
    margin-bottom: 20px; }
/* line 223, _edit_group.scss */
.edit_group_container ul.users li div {
    display: inline-block; }
/* line 227, _edit_group.scss */
.edit_group_container ul.users li p {
    margin: 0;
    padding: 0; }
/* line 231, _edit_group.scss */
.edit_group_container ul.users li span {
    color: #8a8a8a;
    font-size: 13px; }
/* line 235, _edit_group.scss */
.edit_group_container ul.users li select {
    margin-right: 10px;
    float: right;
    width: 80%;
    border-radius: 2px;
    border: 1px solid #bbbbbb;
    -webkit-border-radius: 2px;
    color: #555555;
    background-color: #eaeaea;
    padding: 4px;
    font-size: 12px;
    margin-top: 4px; }
/* line 248, _edit_group.scss */
.edit_group_container ul.users li a {
    float: right;
    display: inline-block; }
/* line 251, _edit_group.scss */
.edit_group_container ul.users li a i {
    background-color: white;
    color: #a6a6a6;
    border: 1px solid #a6a6a6;
    border-radius: 50%;
    padding: 2px 4px;
    margin: 6px 15px 0 5px; }
/* line 262, _edit_group.scss */
.edit_group_container #group_deletion_confirmation {
    position: absolute;
    width: 40%;
    height: 100px;
    background-color: white;
    right: 0px;
    bottom: -92px;
    z-index: 999;
    box-shadow: -2px 2px 5px #8a8a8a; }
@media screen and (max-width: 800px) {
    /* line 262, _edit_group.scss */
    .edit_group_container #group_deletion_confirmation {
        width: 60%; } }
/* line 274, _edit_group.scss */
.edit_group_container #group_deletion_confirmation p {
    color: #555555;
    font-size: 16px;
    padding: 15px; }
/* line 279, _edit_group.scss */
.edit_group_container #group_deletion_confirmation a.pull-left {
    margin: 0 0 0 15px;
    width: 42%; }
/* line 283, _edit_group.scss */
.edit_group_container #group_deletion_confirmation a.pull-right {
    margin: 0 15px 0 0;
    width: 42%; }

/* CUSTOM */
.edit_group_container form a {
    margin: inherit;
}

.edit_group_container div.edit_group header select {
    width: 600px;
    color: white;
    text-align: center;
    line-height: 14px;
    background-color: #359bb7;
    border: 1.5px solid #2f8aa3;
    font-size: 14px;
    margin: 5px 40px 0px 40px;
}

header .username {
    margin-right: 7px;
}

#group_my_groups section.owned {
    background-color: #bce5f0;
    color: #359bb7;
}

#group_organisation_groups section.owned {
    background-color: #99bb9d;
    color: #3f6944;
}

#group_my_groups li.group_section.edit:hover {
    background-color: #e6f5f9;
}

#group_organisation_groups li.group_section.edit:hover {
    background-color: #caddcd;
}

#group_all_groups li.group_section.edit:hover {
    background-color: #cb98cd;
}

#group_search li.group_section.edit:hover {
    background-color: #ffffff;
}

#group_my_groups div:nth-child(2) p:last-child {
    color: #52b2cd;
}

#group_organisation_groups div:nth-child(2) p:last-child {
    color: #548c5b;
}

#group_all_groups div:nth-child(2) p:last-child {
    color: #8e5290;
}

#group_search div:nth-child(2) p:last-child {
    color: #a6a6a6;
}

li.spinner {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

li.spinner a {
    color: #8a8a8a;
    font-size: 13px;
}

.prospect {
    margin-right: 10px;
    float: right;
    width: 80%;
    border-radius: 2px;
    border: 1px solid #bbbbbb;
    -webkit-border-radius: 2px;
    color: #555555;
    background-color: #eaeaea;
    padding: 4px;
    font-size: 12px;
    margin-top: 4px;
    margin-bottom: 4px;
}

.actions {
    float: right;
    width: 55%;
}

.header ul:first-child a {
    height: 35px;
    line-height: 35px;
    float: left;
}

